<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/entireScreen"
    android:background="#36393e">

    <EditText
        android:id="@+id/addTokenView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="244dp"
        android:ems="10"
        android:hint="Token"
        android:inputType="textPassword"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintVertical_bias="0.259"
        app:srcCompat="@drawable/discord_icon" />

    <ImageView
        android:id="@+id/access"
        android:layout_width="55dp"
        android:layout_height="49dp"
        android:layout_marginBottom="244dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/infoMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="304dp"
        android:text="Pulsa en cualquier lugar para continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#FFFFFF"
        android:visibility="gone"/>
...
