<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detailScreen"
    android:background="#424549">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#7289da"

            app:title="Comando"
            app:titleTextColor="@color/cardview_light_background" />

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/command_action"
        android:layout_width="316dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:text="Accion"
        android:textColor="#FFEAEAEA"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/command_trigger" />

    <EditText
        android:id="@+id/command_name"
        android:layout_width="317dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="#EAEAEA"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Nombre"
        android:textColor="#FFEAEAEA"
        app:layout_constraintBottom_toTopOf="@+id/command_trigger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/command_trigger"
        android:layout_width="319dp"
        android:layout_height="59dp"
        android:layout_marginTop="112dp"
        android:text="Trigger"
        android:textColor="#FFEAEAEA"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <ImageView
        android:id="@+id/saveView"
        android:layout_width="44dp"
        android:layout_height="47dp"
        android:layout_marginTop="264dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/command_action"
        app:srcCompat="@drawable/save_icon" />

    <CheckBox
        android:id="@+id/setAsDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="#FFFFFF"
        android:text="Marcar como predeterminado"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveView"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/command_action"
        app:layout_constraintVertical_bias="0.63" />


</androidx.constraintlayout.widget.ConstraintLayout>